Add category lists - Add a router to change the content of the main region - Add category filtering to the visions api - Add list and item views - Add stub templates - Update the links on the home page

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -1,13 +1,13 @@
       <div class="intro-text">
         <p class="intro-prompt">Check out your neighbors' vision of West Louisville's future!</p>
         <ul class="category-list">
-          <li><a href="#" class="economy-link">Economy</a></li>
-          <li><a href="#" class="health-link">Health</a></li>
-          <li><a href="#" class="energy-link">Energy</a></li>
-          <li><a href="#" class="living-link">Living</a></li>
-          <li><a href="#" class="connectivity-link">Connectivity</a></li>
-          <li><a href="#" class="identity-link">Identity</a></li>
-          <li><a href="#" class="creativity-link">Creativity</a></li>
+          <li><a href="#!/list/economy" class="economy-link">Economy</a></li>
+          <li><a href="#!/list/health" class="health-link">Health</a></li>
+          <li><a href="#!/list/energy" class="energy-link">Energy</a></li>
+          <li><a href="#!/list/living" class="living-link">Living</a></li>
+          <li><a href="#!/list/connectivity" class="connectivity-link">Connectivity</a></li>
+          <li><a href="#!/list/identity" class="identity-link">Identity</a></li>
+          <li><a href="#!/list/creativity" class="creativity-link">Creativity</a></li>
         </ul>
       </div>
 
