format visions & visions list

--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -1,1 +1,5 @@
-<p>{{ content }}</p>
+<span class="balloon"></span><span class="tail tail-left">&#9664;</span>
+<blockquote class="vision">
+  <p><a href="/#!/{{ id }}" class="vision-link">{{ content }}</a></p>
+</blockquote>
+<a href="/#!/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
