--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -1,1 +1,6 @@
-This is a form for adding a new vision.
+<h5>Add Your Vision: <em>Category</em></h5>
+<p>What is your vision for the future of West Louisville somethin' in regards to somethin' somethin'?</p>
+<form>
+  <p><textarea placeholder="My vision for West Louisville..."></textarea></p>
+  <input class="btn btn-block btn-primary" value="Tweet My Vision" />
+</form>
