markup & style item template

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -1,1 +1,15 @@
-<p>This is item {{ id }}. It says: "{{ content }}"
+<div class="container">
+  <div class="vision-wrapper">
+    <span class="balloon"></span><span class="tail tail-left">&#9664;</span>
+    <blockquote class="vision">
+      <p>{{ content }}</p>
+    </blockquote>
+    <a href="/#!/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
+  </div>
+</div>
+
+<hr/>
+
+<div class="container">
+  Sharing stuff goes here...
+</div>
