Render the category for each list

--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Visions of <a href="#" class="{{category}}-link">{{ category }}</a>.</h2>
-  <a href="#" class="btn btn-primary btn-block btn-large">Add Your Vision</a>
+  <h2>Visions of <a href="#" class="{{category}}-link category-label">{{ category }}</a>.</h2>
+  <a href="#!/new/{{category}}" class="btn btn-primary btn-block btn-large">Add Your Vision</a>
   <ul class="vision-list"></ul>
 <div>
