--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -1,6 +1,8 @@
-<h5>Add Your Vision: <em class="category-label">{{ category }}</em></h5>
-<p>What is your vision for the future of West Louisville somethin' in regards to somethin' somethin'?</p>
-<form>
-  <p><textarea name="content" placeholder="My vision for West Louisville..."></textarea></p>
-  <input type="submit" class="btn btn-block btn-primary" value="Tweet My Vision" />
-</form>
+<div class="container">
+  <h5>Add Your Vision: <em class="category-label">{{ category }}</em></h5>
+  <p>What is your vision for the future of West Louisville somethin' in regards to somethin' somethin'?</p>
+  <form>
+    <p><textarea name="content" placeholder="My vision for West Louisville..."></textarea></p>
+    <input type="submit" class="btn btn-block btn-primary" value="Tweet My Vision" />
+  </form>
+</div>
