Make routes a little more meaningful.

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -4,7 +4,7 @@
     <blockquote class="vision">
       <p>{{ content }}</p>
     </blockquote>
-    <a href="/#!/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
+    <a href="/#!/visions/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
   </div>
 </div>
 
