--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -1,5 +1,5 @@
 <span class="balloon"></span><span class="tail tail-left">&#9664;</span>
 <blockquote class="vision">
-  <p><a href="/#!/{{ id }}" class="vision-link">{{ content }}</a></p>
+  <p><a href="/#!/visions/{{ id }}" class="vision-link">{{ content }}</a></p>
 </blockquote>
-<a href="/#!/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
+<a href="/#!/visions/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
