--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -1,13 +1,13 @@
       <div class="intro-text">
         <p class="intro-prompt">Check out your neighbors' vision of West Louisville's future!</p>
         <ul class="category-list">
-          <li><a href="#!/list/economy" class="economy-link">Economy</a></li>
-          <li><a href="#!/list/health" class="health-link">Health</a></li>
-          <li><a href="#!/list/energy" class="energy-link">Energy</a></li>
-          <li><a href="#!/list/living" class="living-link">Living</a></li>
-          <li><a href="#!/list/connectivity" class="connectivity-link">Connectivity</a></li>
-          <li><a href="#!/list/identity" class="identity-link">Identity</a></li>
-          <li><a href="#!/list/creativity" class="creativity-link">Creativity</a></li>
+          <li><a href="#!/visions/economy/list" class="economy-link">Economy</a></li>
+          <li><a href="#!/visions/health/list" class="health-link">Health</a></li>
+          <li><a href="#!/visions/energy/list" class="energy-link">Energy</a></li>
+          <li><a href="#!/visions/living/list" class="living-link">Living</a></li>
+          <li><a href="#!/visions/connectivity/list" class="connectivity-link">Connectivity</a></li>
+          <li><a href="#!/visions/identity/list" class="identity-link">Identity</a></li>
+          <li><a href="#!/visions/creativity/list" class="creativity-link">Creativity</a></li>
         </ul>
       </div>
 
