--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Visions of <a href="#" class="{{category}}-link category-label">{{ category }}</a>.</h2>
+  <h2>Visions of <span class="category-label">{{ category }}</span>.</h2>
   <a href="#!/visions/{{category}}/new" class="btn btn-block">Add your vision of {{category}}&hellip;</a>
   <ul class="vision-list"></ul>
 <div>
