Better default text for recent visions on the home page.

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -16,43 +16,43 @@
           <div class="swiper-slide first economy">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>No visions yet for Economy. <a href="#!/visions/economy/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide second health">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+              <p>No visions yet for Health. <a href="#!/visions/health/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide third energy">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>No visions yet for Energy. <a href="#!/visions/energy/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide fourth living">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>No visions yet for Living. <a href="#!/visions/living/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide fifth connectivity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>No visions yet for Connectivity. <a href="#!/visions/connectivity/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide sixth identity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>No visions yet for Identity. <a href="#!/visions/identity/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide seventh creativity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>No visions yet for Creativity. <a href="#!/visions/creativity/new">Add one!</a></p>
             </blockquote>
           </div>
         </div>
