--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -13,13 +13,7 @@
 <div class="container">
   <span class='st_facebook_hcount' displayText='Facebook'></span>
   <span class='st_twitter_hcount' displayText='Tweet' st_via=''></span>
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-  <script type="text/javascript">
-    stLight.options({
-      publisher: "ur-b9846a61-9e48-968d-641f-faa02f559bbf", 
-      doNotHash: false, 
-      doNotCopy: false, 
-      hashAddressBar: false
-    });
+  <script>
+    stButtons.locateElements();
   </script>
 </div>
