Set share values in the item template

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -11,8 +11,8 @@
 <hr/>
 
 <div class="container">
-  <span class='st_facebook_hcount' displayText='Facebook'></span>
-  <span class='st_twitter_hcount' displayText='Tweet' st_via=''></span>
+  <span class='st_facebook_hcount' displayText='Facebook' st_title="{{ content }}" st_url="{{ window_location }}"></span>
+  <span class='st_twitter_hcount' displayText='Tweet' st_title="{{ content }}" st_url="{{ window_location }}"></span>
   <script>
     stButtons.locateElements();
   </script>
