Use the twitter avatar for users

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -4,7 +4,7 @@
     <blockquote class="vision">
       <p>{{ title }}</p>
     </blockquote>
-    <a href="/#!/visions/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a><!-- FIXME: link to list of user's visions -->
+    <a href="/#!/visions/{{ id }}" class="user-link"><img src="{{ author.avatar_url }}" class="avatar" /></a><!-- FIXME: link to list of user's visions -->
   </div>
 </div>
 
