--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -2,4 +2,4 @@
 <blockquote class="vision">
   <p><a href="/#!/visions/{{ id }}" class="vision-link">{{ title }}</a></p>
 </blockquote>
-<a href="/#!/visions/{{ id }}" class="user-link"><img src="/static/images/avatar.png" class="avatar" /></a>
+<a href="/#!/visions/{{ id }}" class="user-link"><img src="{{ author.avatar_url }}" class="avatar" /></a>
