Typo in the form template

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -11,7 +11,7 @@
           <label><input type="radio" name="category" value="economy"> Economy</label>
         </div>
         <div class="vision-category-health">
-          <label<input type="radio" name="category" value="health"> Health</label>
+          <label><input type="radio" name="category" value="health"> Health</label>
         </div>
         <div class="vision-category-identity">
           <label><input type="radio" name="category" value="identity"> Identity</label>
