Update urls for better sharing - changed all of the urls to assume pushstate - add django route to handle a vision id - add twitter and facebook meta tags to the template - handle pushstate urls for old browsers - hijack all urls to navigate through the router - sprinkle some magic for ie

--- a/src/visionlouisville/jstemplates/list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-tpl.html
@@ -1,5 +1,5 @@
 <span class="balloon"></span><span class="tail tail-left">&#9664;</span>
 <blockquote class="vision">
-  <p><a href="/#!/visions/{{ id }}" class="vision-link">{{ title }}</a></p>
+  <p><a href="/visions/{{ id }}" class="vision-link">{{ title }}</a>{{ description }}</p>
 </blockquote>
-<a href="/#!/visions/{{ id }}" class="user-link"><img src="{{ author_avatar_url }}" class="avatar" /></a>
+<a href="/visions/{{ id }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
