--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -1,13 +1,13 @@
       <div class="intro-text">
         <p class="intro-prompt">Check out your neighbors' vision of West Louisville's future!</p>
         <ul class="category-list">
-          <li><a href="#!/visions/economy/list" class="economy-link">Economy</a></li>
-          <li><a href="#!/visions/health/list" class="health-link">Health</a></li>
-          <li><a href="#!/visions/energy/list" class="energy-link">Energy</a></li>
-          <li><a href="#!/visions/living/list" class="living-link">Living</a></li>
-          <li><a href="#!/visions/connectivity/list" class="connectivity-link">Connectivity</a></li>
-          <li><a href="#!/visions/identity/list" class="identity-link">Identity</a></li>
-          <li><a href="#!/visions/creativity/list" class="creativity-link">Creativity</a></li>
+          <li><a href="/visions/economy/list" class="economy-link">Economy</a></li>
+          <li><a href="/visions/health/list" class="health-link">Health</a></li>
+          <li><a href="/visions/energy/list" class="energy-link">Energy</a></li>
+          <li><a href="/visions/living/list" class="living-link">Living</a></li>
+          <li><a href="/visions/connectivity/list" class="connectivity-link">Connectivity</a></li>
+          <li><a href="/visions/identity/list" class="identity-link">Identity</a></li>
+          <li><a href="/visions/creativity/list" class="creativity-link">Creativity</a></li>
         </ul>
       </div>
 
@@ -16,43 +16,43 @@
           <div class="swiper-slide first economy">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Economy. <a href="#!/visions/economy/new">Add one!</a></p>
+              <p>No visions yet for Economy. <a href="/visions/economy/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide second health">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Health. <a href="#!/visions/health/new">Add one!</a></p>
+              <p>No visions yet for Health. <a href="/visions/health/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide third energy">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Energy. <a href="#!/visions/energy/new">Add one!</a></p>
+              <p>No visions yet for Energy. <a href="/visions/energy/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide fourth living">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Living. <a href="#!/visions/living/new">Add one!</a></p>
+              <p>No visions yet for Living. <a href="/visions/living/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide fifth connectivity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Connectivity. <a href="#!/visions/connectivity/new">Add one!</a></p>
+              <p>No visions yet for Connectivity. <a href="/visions/connectivity/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide sixth identity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Identity. <a href="#!/visions/identity/new">Add one!</a></p>
+              <p>No visions yet for Identity. <a href="/visions/identity/new">Add one!</a></p>
             </blockquote>
           </div>
           <div class="swiper-slide seventh creativity">
             <span class="balloon"></span><span class="tail">&#9660;</span>
             <blockquote class="vision">
-              <p>No visions yet for Creativity. <a href="#!/visions/creativity/new">Add one!</a></p>
+              <p>No visions yet for Creativity. <a href="/visions/creativity/new">Add one!</a></p>
             </blockquote>
           </div>
         </div>
