--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Visions for <span class="category-label">{{ category }}</span></h2>
-  <a href="#!/visions/{{category}}/new" class="btn btn-block">Add your vision for <span class="category-label">{{category}}</span>&hellip;</a>
+  <h2>Visions</h2>
+  <a href="/visions/{{ category }}/new" class="btn btn-block">Add your vision&hellip;</a>
   <ul class="vision-list"></ul>
 <div>
