Add a text box for replies with a character counter - Update the item template - Show the reply form when the button is clicked - Init character counter on view render - Include Countable plugin

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -38,6 +38,10 @@
     {{^}}
       <p>Be the first to leave your thoughts!</p>
     {{/if}}
-    <button>Reply to this vision</button>
+    <button class="reply-btn">Reply to this vision</button>
+  </div>
+  <div class="reply-container">
+    <textarea class="reply-text"></textarea>
+    <span class='reply-count'></span><button>Tweet a reply</button>
   </div>
 </div>
