Create a new reply to a vision - Handle form submission event - Enable/disable submit button based on char counts - Add and use ReplyCollection - Add utils.js with a serializeObject function

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -24,8 +24,8 @@
     <ul></ul>
   </div>
   <button class="show-reply-btn">Reply to this vision</button>
-  <div class="reply-container">
-    <textarea class="reply-text"></textarea>
-    <span class='reply-count'></span><button>Tweet a reply</button>
-  </div>
+  <form class="reply-form">
+    <textarea name="text" class="reply-text"></textarea>
+    <span class='reply-count'></span><button class="reply-btn" disabled>Tweet a reply</button>
+  </form>
 </div>
