Hook up links in header bar to appropriate places

--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
   <h2>Visions</h2>
-  <a href="/visions/{{ category }}/new" class="btn btn-block">Add your vision&hellip;</a>
+  <a href="/visions/new" class="btn btn-block">Add your vision&hellip;</a>
   <ul class="vision-list"></ul>
 <div>
