--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="container">
-  <div class="replies-wrapper">
+  <div class="replies">
     <h6>What people are saying:</h6>
     <ul class="replies-list unstyled-list"></ul>
   </div>
