Link vision category to list of visions with that category

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -22,7 +22,7 @@
       <a href="#" class="retweet-link">Retweet</a>
       <a href="#" class="reply-link">Reply</a>
       <!-- FIXME: link to category vision list -->
-      <a href="#" class="category-link">Category: <strong class="capitalize">{{ category }}</strong></a>
+      <a href="/visions/{{ category }}/list" class="category-link">Category: <strong class="capitalize">{{ category }}</strong></a>
     </footer>
 
   </article><!-- end .vision -->
