stub in support markup and style it

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -13,6 +13,8 @@
         <em class="twitter-handle">@{{ author_details.username }}</em>
       </span>
 
+      <a href="#" class="support supported"><img class="heart" src="/static/images/heart.png"> <span class="support-count total-support-count">642</span></a>
+
     </header>
 
     <h1 class="vision-title">{{ title }}</h1>
@@ -29,6 +31,12 @@
 </div>
 
 <div class="container">
+
+  <div class="support">
+    <p class="support supported"><img class="heart heart-inline" src="/static/images/heart-beige.png"> You, <span class="support-count visionary-support-count">610</span> Visionary(s) &amp; <span class="support-count ally-support-count">31</span> Ally(s) support this.</p>
+    <ul class="supporters-list unstyled-list"></ul>
+  </div>
+
   <div class="replies">
     <h6>What people are saying:</h6>
     <ul class="replies-list unstyled-list"></ul>
