--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
   <h2>Visions</h2>
   <a href="/visions/new" class="btn btn-block">Add your vision&hellip;</a>
-  <ul class="vision-list"></ul>
+  <ul class="vision-list unstyled-list"></ul>
 <div>
