style homepage vision gallery

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -11,42 +11,48 @@
         </ul>
       </div>
 
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide first economy">
-            <blockquote class="vision">
-              <p>No visions yet for Economy. <a href="/visions/economy/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide second health">
-            <blockquote class="vision">
-              <p>No visions yet for Health. <a href="/visions/health/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide third energy">
-            <blockquote class="vision">
-              <p>No visions yet for Energy. <a href="/visions/energy/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide fourth living">
-            <blockquote class="vision">
-              <p>No visions yet for Living. <a href="/visions/living/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide fifth connectivity">
-            <blockquote class="vision">
-              <p>No visions yet for Connectivity. <a href="/visions/connectivity/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide sixth identity">
-            <blockquote class="vision">
-              <p>No visions yet for Identity. <a href="/visions/identity/new">Add one!</a></p>
-            </blockquote>
-          </div>
-          <div class="swiper-slide seventh creativity">
-            <blockquote class="vision">
-              <p>No visions yet for Creativity. <a href="/visions/creativity/new">Add one!</a></p>
-            </blockquote>
+      <div class="container-fullwidth vision-gallery">
+
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide first economy">
+              <article class="vision">
+                <p>No visions yet for Economy. <a href="/visions/economy/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide second health">
+              <article class="vision">
+                <p>No visions yet for Health. <a href="/visions/health/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide third energy">
+              <article class="vision">
+                <p>No visions yet for Energy. <a href="/visions/energy/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide fourth living">
+              <article class="vision">
+                <p>No visions yet for Living. <a href="/visions/living/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide fifth connectivity">
+              <article class="vision">
+                <p>No visions yet for Connectivity. <a href="/visions/connectivity/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide sixth identity">
+              <article class="vision">
+                <p>No visions yet for Identity. <a href="/visions/identity/new">Add one!</a></p>
+              </article>
+            </div>
+            <div class="swiper-slide seventh creativity">
+              <blockquote class="vision">
+                <p>No visions yet for Creativity. <a href="/visions/creativity/new">Add one!</a></p>
+              </blockquote>
+            </div>
           </div>
         </div>
+        <div class="pagination"></div>
+
       </div>
+      <a href="/visions/list" class="btn btn-block">See All Visions</a>
