--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <h2>Visions</h2>
+  <h2><span style="text-transform:capitalize;">{{ category }}</span> Visions</h2>
+  {{# if category }}
+  <h6>{{ category_prompt category }}</h6>
+  {{/ if }}
   <a href="/visions/new" class="btn btn-block">Add your vision&hellip;</a>
   <ul class="vision-list unstyled-list"></ul>
 <div>
