Start adding logic for rendering supporters of a vision - Add model relationship from vision to support - Add support templates and views - Render support list view in its region on the item detail view

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -30,6 +30,6 @@
 </div>
 
 <div class="container">
-  <div class="support"></div>
-  <div class="replies"></div>
+  <div class="support-region"></div>
+  <div class="replies-region"></div>
 </div>
